Register and Login routing Fixed.

--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -58,5 +58,12 @@
   <span *ngIf="!loading">Registrarse</span>
 </ion-button>
 
+<div class="ion-text-center ion-margin-top">
+    <ion-text>
+   ¿Ya tienes cuenta? 
+  <a (click)="goToLogin()">Inicia sesión</a>
+    </ion-text>
+  </div>
+
   </form>
 </ion-content>
